--- a/nyanya_backend/requirements.txt
+++ b/nyanya_backend/requirements.txt
@@ -14,6 +14,11 @@ django-cors-headers==4.4.0
 # Environment variables
 python-decouple==3.8
 
+# Heroku deployment
+dj-database-url==2.2.0
+gunicorn==23.0.0
+whitenoise==6.8.2
+
 # Data processing & ML
 pandas==2.2.3
 scikit-learn==1.6.1
